tests/ui/consts/const-item-no-type/in-macro.stderr
error[E0428]: the name `A` is defined multiple times
  --> $DIR/in-macro.rs:4:13
   |
LL |               const A = "A".$fn();
   |               ^^^^^^^^^^^^^^^^^^^^ `A` redefined here
...
LL | / suite! {
LL | |     len;
LL | |     is_empty;
LL | | }
   | |_- in this macro invocation
   |
   = note: `A` must be defined only once in the value namespace of this module
   = note: this error originates in the macro `suite` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0658]: omitting type on const item declaration is experimental
  --> $DIR/in-macro.rs:4:20
   |
LL |               const A = "A".$fn();
   |                      ^
...
LL | / suite! {
LL | |     len;
LL | |     is_empty;
LL | | }
   | |_- in this macro invocation
   |
   = note: see issue #149226 <https://github.com/rust-lang/rust/issues/149226> for more information
   = help: add `#![feature(const_items_unit_type_default)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date
   = help: consider specifying the type explicitly
   = note: this error originates in the macro `suite` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0658]: omitting type on const item declaration is experimental
  --> $DIR/in-macro.rs:4:20
   |
LL |               const A = "A".$fn();
   |                      ^
...
LL | / suite! {
LL | |     len;
LL | |     is_empty;
LL | | }
   | |_- in this macro invocation
   |
   = note: see issue #149226 <https://github.com/rust-lang/rust/issues/149226> for more information
   = help: add `#![feature(const_items_unit_type_default)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date
   = help: consider specifying the type explicitly
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`
   = note: this error originates in the macro `suite` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> $DIR/in-macro.rs:4:23
   |
LL |               const A = "A".$fn();
   |                         ^^^^^^^^^ expected `()`, found `usize`
...
LL | / suite! {
LL | |     len;
LL | |     is_empty;
LL | | }
   | |_- in this macro invocation
   |
   = note: this error originates in the macro `suite` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> $DIR/in-macro.rs:4:23
   |
LL |               const A = "A".$fn();
   |                         ^^^^^^^^^ expected `()`, found `bool`
...
LL | / suite! {
LL | |     len;
LL | |     is_empty;
LL | | }
   | |_- in this macro invocation
   |
   = note: this error originates in the macro `suite` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 5 previous errors

Some errors have detailed explanations: E0308, E0428, E0658.
For more information about an error, try `rustc --explain E0308`.
